chore: use new java language features